# efp-machine

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env  .env.example  Dockerfile  README.md  bbg_data.json  efp.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: config.py  deps.py  main.py  models.py  schemas.py  users.csv
backend/app/routers/: ai.py  bloomberg_msg.py  blotter.py  efp.py  health.py  instruments.py  orders.py  quotes.py  send_message.py  slack_msg.py  whatsapp.py
backend/app/services/: efp_protocol.py  efp_run.py  expiry.py  fetch_messages.py  market.py  order_ingest.py  parse.py  scheduler.py  simple_parser.py  slack_client.py  theory.py  user_loader.py  whatsapp_client.py
backend/app/utils/: time.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: AtomicClock.tsx  BloombergMessage.tsx  BlotterPanel.tsx  ChatPanel.tsx  EfpRunTable.tsx  MarketValuesPanel.tsx  Orders.tsx  PredictionPanel.tsx  RatesPanel.tsx  RecapLog.tsx  bbg_upload.tsx
frontend/src/lib/: api.ts
reverse-proxy/: nginx.conf
