[project]
name = 'efp-machine-backend'
version = '0.1.0'
description = 'AI-powered EFP trading backend'
requires-python = '>=3.10'
dependencies = [
  'fastapi>=0.112.0',
  'uvicorn[standard]>=0.30.0',
  'pydantic>=2.7.4',
  'pydantic-settings>=2.4.0',
  'python-dotenv>=1.0.1',
  'SQLAlchemy>=2.0.29',
  'alembic>=1.13.2',
  'psycopg2-binary>=2.9.9',
  'aiosqlite>=0.20.0',
  'asyncpg>=0.29.0',
  'httpx>=0.27.0',
  'openai>=1.40.0',
  'apscheduler>=3.10.4',
  'pytz>=2024.1',
  'orjson>=3.10.7',
  'websockets>=12.0',
  'starlette>=0.37.2',
  'python-dateutil>=2.9.0.post0',
  'yfinance',
  'python-multipart',
  'httpx',
  'slack_sdk'
]

[project.optional-dependencies]
dev = [
  'black>=24.4.2',
  'ruff>=0.5.6',
  'pytest>=8.3.1',
  'pytest-asyncio>=0.23.7',
  'mypy>=1.10.0',
  'types-python-dateutil',
]

[tool.ruff]
line-length = 100
target-version = 'py310'

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = 'auto'
